# atcoder-problems-bandit

./: .gitignore  Cargo.toml  contests.json
src/: bandit.rs  lib.rs  main.rs  mock_server.rs
src/bandit/: ucb1.rs
