[package]
name = "atcoder-problems-bandit"
version = "0.1.0"
authors = ["Kenkou Nakamura <knakamura@indeed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
serde_json = "1.0"
